updating index to fix text alignment

--- a/styles1.css
+++ b/styles1.css
@@ -32,3 +32,6 @@ footer {
 	background-color: #aeaca8;
 }
 
+.useCase, h2, h4, p {
+	float: left;
+}
